--- a/intro.qmd
+++ b/intro.qmd
@@ -1,5 +1,56 @@
-# Introduction
+# Introduction {#sec-introduction}
 
-This is a book created from markdown and executable code.
 
-See @knuth84 for additional discussion of literate programming.
+## The discipline of Statistics
+
+Statistics relies heavily on **probability theory** and encompasses empirical methods for collecting, organizing, summarizing, and presenting data, with the objective of drawing inferences about the population from which the data are derived. It includes different theoretical frameworks such as **traditional** (frequentist) statistics and **Bayesian** statistics. In this course, we will cover classical parametric and nonparametric statistical tests of traditional statistics.
+
+The discipline of traditional (frequentist) statistics includes two main branches (@fig-branches):
+
+- **Descriptive** statistics that includes measures of frequency and measures of location and dispersion. It also includes a description of the shape of the data distributions.
+
+- **Inferential** statistics that aims at generalizing conclusions made on a sample to a whole population. It includes estimation and hypothesis testing.
+
+
+```{mermaid}
+%%| label: fig-branches
+%%| fig-width: 9
+%%| fig-cap: The discipline of statistics and its two branches, descriptive statistics and inferential statistics
+
+flowchart LR
+  
+    A[Traditional <br/> Statistics]--- B[Descriptive statistics]
+    A --- C[Inferential statistics]
+    B --- D[Measures of frequency: <br/> e.g., frequency, percentage.]
+    B --- E[Measures of location <br/> and dispersion: <br/> e.g., mean, standard deviation.]
+    C --- H[Estimation]
+    C --- I[Hypothesis Testing]
+    style A color:#980000, stroke:#333,stroke-width:4px
+    
+```
+
+ 
+
+## Data and variables
+
+Data in the social sciences refers to the information collected and analyzed to understand human behavior, societal structures and interactions. This data can come from a variety of sources, each offering unique insights into different aspects of human and societal dynamics. These sources include:
+
+-   **Electronic Health Records (EHRs):** Provide detailed information about patients' medical histories, treatments, and health outcomes.
+
+-   **Surveillance Systems:** Continuously monitor and analyze trends in real-time, including disease outbreaks, rollout and uptake of vaccinations, public health patterns, substance abuse trends, and crime statistics, to inform timely interventions and policy decisions.
+
+-   **Clinical Registries:** Collect data on patients with specific medical conditions or treatments, offering insights into health outcomes and social determinants of health.
+
+-   **Biobanks:** Store biological samples (e.g., blood, tissue) along with health and lifestyle data, helping to study the intersection of genetics, environment, and social factors.
+
+-   **Internet and Social Media:** Generate large volumes of data on online interactions, behaviors, and social trends.
+
+-   **Self-Reports:** Gather data through interviews, questionnaires, and surveys that capture individual experiences, behaviors, and attitudes, providing qualitative insights that enhance understanding of personal perspectives and social phenomena.
+
+
+Social, behavioral, and biomedical **data** can be transformed into **information**. This information can evolve into **knowledge** when social scientists and stakeholders interpret and understand it, allowing them to take informed **actions**.
+
+![From data to knowledge.](images/info.png){#fig-info width="90%"}
+
+
+
