--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,15 @@
 }
 
 
+
+@article{friligkou2024,
+	title = {Gene discovery and biological insights into anxiety disorders from a large-scale multi-ancestry genome-wide association study},
+	author = {Friligkou, Eleni and {Løkhammer}, Solveig and Cabrera-Mendoza, Brenda and Shen, Jie and He, Jun and Deiana, Giovanni and Zanoaga, Mihaela Diana and Asgel, Zeynep and Pilcher, Abigail and Di Lascio, Luciana and Makharashvili, Ana and Koller, Dora and Tylee, Daniel S. and Pathak, Gita A. and Polimanti, Renato},
+	year = {2024},
+	month = {09},
+	date = {2024-09-18},
+	journal = {Nature Genetics},
+	doi = {10.1038/s41588-024-01908-2},
+	url = {http://dx.doi.org/10.1038/s41588-024-01908-2},
+	langid = {en}
+}
